2014-10-22  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>

        * v2.1.5 ticket #3 (https://sourceforge.net/p/spatial/tickets/3/)
        reported by Michał Garapich has been solved. neighbor_iterator can now
        be used with const containers, as expected.

2014-10-21  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>

        * v2.1.4 The mapping iterator is now dissociated from the containers,
        its header file and definition will not be pulled by default anymore
        when the containers include file are specified. So its include file
        "spatial/mapping_iterator" must be specified.

        * Intermediary release of the developments on the feature_4 branch with
        improvements on the performance of the mapping iterator and the erase
        function for the idle_* family of containers. Performance improvements
        between 5% and 50% faster.

2014-03-12  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>

        * v2.1.3 ticket #1 including idle_point_multiset.hpp stops project from
        compiling https://sourceforge.net/p/spatial/tickets/1/ has been fixed.

2013-12-21  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>

        * v2.1.2 Added the perfect_balancing policy for Relaxed_kdtree, improved
        documentation and improve the speed of the reblance() algorithm by 10x.

2013-11-10  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>

        * v2.1.1 Fixed a bug on the rebalance() function in the kdtrees. All the
        unit tests on the tree where not taken into account, now they are.

2013-07-28  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>

        * v2.1.0 Added the new equal_iterator optimized for containers with
        strict invariant trees, such as idle_point_multiset, idle_box_multiset,
        etc.

2013-07-21  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>

        * v2.0.1 Some updates to the documentation.

2013-05-18  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>
