@@ -1,3 +1,13 @@
+2014-10-27  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>
+
+        * v2.1.6 Ticket #2 (https://sourceforge.net/p/spatial/tickets/2/)
+        reported by Ed Baskerville has been solved. To solve it, C++11 support
+        for compilation has been added to the library for Clang++ and
+        G++. Additionally support for libc++ and Clang++, has also been
+        added. Note that C++11 support only means it compiles when the compiler
+        is set to be compliant with C++11. The library's APIs have yet so
+        support new semantics such as rvalues, initialization lists, etc.
+
 2014-10-22  Sylvain Bougerel  <sylvain.bougerel.devel@gmail.com>
 
         * v2.1.5 ticket #3 (https://sourceforge.net/p/spatial/tickets/3/)
